developer/src/kmc-package/test/fixtures/invalid/warn_redist_file_should_not_be_in_package.kps
<?xml version="1.0" encoding="utf-8"?>
<Package>
  <System>
    <KeymanDeveloperVersion>15.0.266.0</KeymanDeveloperVersion>
    <FileVersion>7.0</FileVersion>
  </System>
  <Info>
    <Name URL="">SENĆOŦEN (Saanich Dialect) Lexical Model</Name>
    <Copyright URL="">© 2019 National Research Council Canada</Copyright>
    <Author URL="mailto:Eddie.Santos@nrc-cnrc.gc.ca">Eddie Antonio Santos</Author>
    <Version>1.0</Version>
  </Info>
  <Files>
    <File>
      <Name>basic.kmx</Name>
      <Description>Keyboard Basic</Description>
      <CopyLocation>0</CopyLocation>
      <FileType>.kmx</FileType>
    </File>
    <!-- warn_redist_file_should_not_be_in_package -->
    <File>
      <Name>keyman.exe</Name>
      <Description>Keyman Program</Description>
      <CopyLocation>0</CopyLocation>
      <FileType>.exe</FileType>
    </File>
  </Files>
  <Keyboards>
    <Keyboard>
      <Name>Basic</Name>
      <ID>basic</ID>
      <Version>1.0</Version>
      <Languages>
        <Language ID="KM">Khmer</Language>
      </Languages>
    </Keyboard>
  </Keyboards>
</Package>
